--- a/index.html
+++ b/index.html
@@ -40,17 +40,28 @@
 const API_URL = "https://script.google.com/macros/s/AKfycby4oVIMCM_yRFZBDHobiV20TgogG6MTL78T2J6xI99MySPj4b9gNL557U4OoZtsywzMLw/exec";
 
 const students = [
-  {id:1, name:"吳哲賢"},
-  {id:2, name:"李政穎"},
-  {id:3, name:"陳竑諶"},
-  {id:4, name:"柯羿辰"},
-  {id:5, name:"謝承叡"},
-  {id:6, name:"王裕睿"},
-  {id:7, name:"陳秉謙"},
-  {id:8, name:"軒轅承孺"},
-  {id:9, name:"林楷倫"},
-  {id:10, name:""}
+  { id: 1, name: "吳哲賢" },
+  { id: 2, name: "李政穎" },
+  { id: 3, name: "陳竑諶" },
+  { id: 4, name: "柯羿辰" },
+  { id: 5, name: "謝承叡" },
+  { id: 6, name: "王裕睿" },
+  { id: 7, name: "陳秉謙" },
+  { id: 8, name: "軒轅承孺" },
+  { id: 9, name: "林楷倫" },
+  { id: 10, name: "王利帆" },
+  { id: 11, name: "林若妘" },
+  { id: 12, name: "陳語菲" },
+  { id: 13, name: "莊苡琳" },
+  { id: 14, name: "林語紓" },
+  { id: 15, name: "林海薇" },
+  { id: 16, name: "謝宜庭" },
+  { id: 17, name: "賴泇伃" },
+  { id: 18, name: "陳姸蓁" },
+  { id: 19, name: "魏芷翎" },
+  { id: 20, name: "游采璇" }
 ];
+
 
 const signed = JSON.parse(localStorage.getItem("signed") || "[]");
 const list = document.getElementById("list");
