--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     background: #f5f5f5;
     text-align: center;
   }
-  h1 { margin-top: 20px; }
+  h1 { margin-top: 30px; }
+  
   .list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -33,6 +34,8 @@
 <body>
 
 <h1>📋 今日簽到</h1>
+<button id="resetBtn">🔄 重新簽到</button>
+
 
 <div class="list" id="list"></div>
 
