--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <meta charset="UTF-8">
 <title>平板簽到系統</title>
 <style>
-  #clock {
-  font-size: 26px;
-  margin-bottom: 20px;
-  color: #333;
+  #resetBtn {
+  margin: 20px;
+  font-size: 18px;
+  padding: 12px 25px;
+  border: none;
+  border-radius: 10px;
+  background: #e53935;
+  color: white;
 }
 
   body {
@@ -15,18 +19,16 @@
     background: #f5f5f5;
     text-align: center;
   }
-  h1 { margin-top: 30px; }
-  <div id="clock"></div>
+  h1 { margin-top: 20px; }
+  <button id="resetBtn">🔄 重新簽到</button>
 
-  
-.list {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 24px;
-  max-width: 1200px;
-  margin: auto;
-}
-
+  .list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+    max-width: 600px;
+    margin: auto;
+  }
   button {
     font-size: 20px;
     padding: 20px;
@@ -43,19 +45,10 @@
 <body>
 
 <h1>📋 今日簽到</h1>
-<button id="resetBtn">🔄 重新簽到</button>
-
 
 <div class="list" id="list"></div>
 
 <script>
-document.getElementById("resetBtn").onclick = () => {
-  if (confirm("確定要重新開始簽到嗎？")) {
-    localStorage.removeItem("signed");
-    location.reload();
-  }
-};
-
 const API_URL = "https://script.google.com/macros/s/AKfycby4oVIMCM_yRFZBDHobiV20TgogG6MTL78T2J6xI99MySPj4b9gNL557U4OoZtsywzMLw/exec";
 
 const students = [
@@ -90,17 +83,8 @@ students.forEach(s => {
   btn.textContent = `${s.id}. ${s.name}`;
   if (signed.includes(s.id)) {
     btn.classList.add("signed");
-    btn.disabled = true;function updateClock() {
-  const now = new Date();
-  const date = now.toLocaleDateString("zh-TW");
-  const time = now.toLocaleTimeString("zh-TW");
-  document.getElementById("clock").textContent =
-    `📅 ${date}　⏰ ${time}`;
-}
-
-updateClock();
-setInterval(updateClock, 1000);
-
+    btn.disabled = true;
+  }
 
   btn.onclick = () => {
     fetch(API_URL, {
@@ -124,3 +108,4 @@ setInterval(updateClock, 1000);
 
 </body>
 </html>
+
