--- a/index.html
+++ b/index.html
@@ -4,61 +4,12 @@
 <meta charset="UTF-8">
 <title>平板簽到系統</title>
 <style>
- body {
-  font-family: "PingFang TC", "Noto Sans TC", Arial, sans-serif;
-  background: #f2f2f2;
-  text-align: center;
-}
-
-h1 {
-  font-size: 42px;
-  margin: 20px 0 10px;
-}
-
-#resetBtn {
-  margin: 10px 0 25px;
-  font-size: 24px;
-  padding: 16px 40px;
-  border: none;
-  border-radius: 14px;
-  background: #e53935;
-  color: white;
-}
-
-.list {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 24px;
-  max-width: 1000px;
-  margin: auto;
-}
-
-button {
-  font-size: 28px;
-  padding: 28px 10px;
-  border: none;
-  border-radius: 20px;
-  background: #4CAF50;
-  color: white;
-}
-
-button span {
-  display: block;
-  font-size: 22px;
-  margin-top: 6px;
-}
-
-button.signed {
-  background: #9e9e9e;
-}
-
   body {
     font-family: Arial;
     background: #f5f5f5;
     text-align: center;
   }
   h1 { margin-top: 20px; }
-  <button id="resetBtn">🔄 重新簽到</button>
   .list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -82,17 +33,10 @@ button.signed {
 <body>
 
 <h1>📋 今日簽到</h1>
-<button id="resetBtn">🔄 重新簽到</button>
 
+<div class="list" id="list"></div>
 
 <script>
-  document.getElementById("resetBtn").onclick = () => {
-  if (confirm("確定要重新開始簽到嗎？")) {
-    localStorage.removeItem("signed");
-    location.reload();
-  }
-};
-
 const API_URL = "https://script.google.com/macros/s/AKfycby4oVIMCM_yRFZBDHobiV20TgogG6MTL78T2J6xI99MySPj4b9gNL557U4OoZtsywzMLw/exec";
 
 const students = [
