Update header text for attendance system

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 
-<h1>📋 今日簽到</h1><button id="resetBtn">🔄 重新簽到</button>
+<h1>📋 平板簽到系統</h1><button id="resetBtn">🔄 重新簽到</button>
 
 
 <div class="list" id="list"></div>
